[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow/arrow.tres" type="Texture" id=2]
[ext_resource path="res://assets/textbox.png" type="Texture" id=4]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends Label


func _process(_delta: float) -> void:
	var fps := String(Engine.get_frames_per_second())
	text = \"tiny ludwig's big adventure\\nfps: \" + fps
"

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="GUI" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="FPSCount" type="Label" parent="."]
margin_left = 37.0
margin_top = 38.0
margin_right = 664.0
margin_bottom = 79.0
text = "tiny ludwig's big adventure
fps: -1"
script = SubResource( 1 )

[node name="LevelLabel" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 648.0
margin_right = 662.0
margin_bottom = 689.0
text = "ROOM EXAMPLE"
valign = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -113.0

[node name="InteractLabel" type="Label" parent="CenterContainer"]
visible = false
margin_left = 535.0
margin_top = 47.0
margin_right = 744.0
margin_bottom = 66.0
text = "Interaction"

[node name="AdvanceContainer" type="Control" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_right = 1280.0
margin_bottom = 360.0

[node name="DialogueBox" type="MarginContainer" parent="AdvanceContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -613.0
margin_top = 1.0
margin_right = 613.0
margin_bottom = 157.0
mouse_filter = 2

[node name="Background" type="TextureRect" parent="AdvanceContainer/DialogueBox"]
margin_right = 1226.0
margin_bottom = 156.0
mouse_filter = 2
theme = ExtResource( 5 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="NameLabel" type="Label" parent="AdvanceContainer/DialogueBox/Background"]
unique_name_in_owner = true
anchor_left = 0.011
anchor_top = 0.051
anchor_right = 0.011
anchor_bottom = 0.051
margin_left = 7.514
margin_top = 12.044
margin_right = 311.514
margin_bottom = 31.044
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
valign = 1

[node name="TextLabel" type="Label" parent="AdvanceContainer/DialogueBox/Background"]
unique_name_in_owner = true
margin_left = 43.0
margin_top = 47.0
margin_right = 1202.0
margin_bottom = 157.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 11
text = "line one
line two
line three"
autowrap = true

[node name="Tween" type="Tween" parent="AdvanceContainer/DialogueBox/Background/TextLabel"]

[node name="Arrow" type="TextureRect" parent="AdvanceContainer/DialogueBox/Background"]
unique_name_in_owner = true
visible = false
margin_left = 1166.0
margin_top = 100.0
margin_right = 1210.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 171, 2 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="PressSpaceLabel" type="Label" parent="AdvanceContainer/DialogueBox/Background"]
unique_name_in_owner = true
visible = false
anchor_left = 0.011
anchor_top = 0.051
anchor_right = 0.011
anchor_bottom = 0.051
margin_left = 461.514
margin_top = 124.044
margin_right = 765.514
margin_bottom = 143.044
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PRESS SPACE"
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/RESET = SubResource( 2 )
anims/fade_to_black = SubResource( 3 )
anims/fade_to_normal = SubResource( 4 )

[connection signal="gui_input" from="AdvanceContainer" to="." method="_on_AdvanceContainer_gui_input"]
[connection signal="tween_completed" from="AdvanceContainer/DialogueBox/Background/TextLabel/Tween" to="." method="_on_Tween_tween_completed"]
